# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  query_labs.py  query_scores.py
mcp/mcp_lms/: client.py.save  server.py  server.py.full
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/: AGENTS.md
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
