[project]
name = "nanobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
    "lms-mcp",
    "nanobot-ai>=0.1.4.post6",
    "nanobot-webchat",
]

[tool.uv.sources]
lms-mcp = { path = "../mcp", editable = true }
nanobot-webchat = { workspace = true, editable = true }
